Fix style on mobile

--- a/src/assets/stylesheets/info-dialog.scss
+++ b/src/assets/stylesheets/info-dialog.scss
@@ -13,10 +13,11 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
 
   &__align-end {
     align-items: end;
+    bottom: 0;
+    position: absolute;
   }
 
   &__dark-background {
